# kylin-burner

./: AUTHORS  CMakeLists.txt  COPYING  COPYING.DOC  ChangeLog  FAQ.txt  INSTALL.txt  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.txt  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gtk-doc.make  libburner-burn3.pc.in  libburner-media3.pc.in  main.pro
.pc/build-with-tracker2.patch/: configure.ac
data/icons/: Makefile.am  Makefile.in
libburner-burn/: Makefile.am  Makefile.in  burn-basics.c  burn-basics.h  burn-caps.c  burn-caps.h  burn-dbus.c  burn-dbus.h  burn-debug.c  burn-debug.h  burn-image-format.c  burn-image-format.h  burn-job.c  burn-job.h  burn-mkisofs-base.c  burn-mkisofs-base.h  burn-plugin-manager.c  burn-plugin-manager.h  burn-plugin.c  burn-process.c  burn-process.h  burn-task-ctx.c  burn-task-ctx.h  burn-task-item.c  burn-task-item.h  burn-task.c  burn-task.h  burner-app-indicator.c  burner-app-indicator.h  burner-blank-dialog.c  burner-blank-dialog.h  burner-burn-dialog.c  burner-burn-dialog.h  burner-burn-lib.h  burner-burn-lib.h.in  burner-burn-options.c  burner-burn-options.h  burner-burn.c  burner-burn.h  burner-caps-burn.c  (+85 more)
libburner-media/: COPYING  Makefile.am  Makefile.in  burn-iso-field.c  burn-iso-field.h  burn-iso9660.c  burn-iso9660.h  burn-susp.c  burn-susp.h  burn-volume-source.c  burn-volume-source.h  burn-volume.c  burn-volume.h  burner-drive-priv.h  burner-drive-selection.c  burner-drive-selection.h  burner-drive.c  burner-drive.h  burner-gio-operation.c  burner-gio-operation.h  burner-media-private.h  burner-media.c  burner-media.h  burner-media.h.in  burner-medium-monitor.c  burner-medium-monitor.h  burner-medium-selection-priv.h  burner-medium-selection.c  burner-medium-selection.h  burner-medium.c  burner-medium.h  burner-units.c  burner-units.h  burner-volume.c  burner-volume.h  libburner-marshal.c  libburner-marshal.h  scsi-base.h  scsi-cam.c  scsi-command.h  (+47 more)
libburner-utils/: Makefile.am  Makefile.in  burner-async-task-manager.c  burner-async-task-manager.h  burner-disc-message.c  burner-disc-message.h  burner-io.c  burner-io.h  burner-jacket-background.c  burner-jacket-background.h  burner-jacket-buffer.c  burner-jacket-buffer.h  burner-jacket-edit.c  burner-jacket-edit.h  burner-jacket-font.c  burner-jacket-font.h  burner-jacket-view.c  burner-jacket-view.h  burner-metadata.c  burner-metadata.h  burner-misc.c  burner-misc.h  burner-notify.c  burner-notify.h  burner-pk.c  burner-pk.h  burner-tool-color-picker.c  burner-tool-color-picker.h
plugins/: CMakeLists.txt  Makefile.in
plugins/audio2cue/: Makefile.am  Makefile.in  burn-audio2cue.c
plugins/cdrdao/: Makefile.am  Makefile.in  burn-cdrdao.c
plugins/cdrkit/: Makefile.am  Makefile.in  burn-cdrkit.h  burn-genisoimage.c  burn-readom.c  burn-wodim.c
plugins/cdrtools/: Makefile.am  Makefile.in  burn-cdda2wav.c  burn-cdrecord.c  burn-cdrtools.h  burn-mkisofs.c  burn-readcd.c
plugins/checksum/: Makefile.am  Makefile.in  burn-checksum-files.c  burn-checksum-image.c  burn-volume-read.c  burn-volume-read.h
plugins/decoder/ffmpeg/: k3bffmpegdecoder.cpp  k3bffmpegwrapper.cpp
plugins/decoder/flac/: k3bflacdecoder.cpp
plugins/decoder/libsndfile/: k3blibsndfiledecoder.cpp
plugins/decoder/mp3/: k3bmaddecoder.cpp
plugins/decoder/musepack/: k3bmpcdecoder.cpp
plugins/decoder/ogg/: k3boggvorbisdecoder.cpp
plugins/decoder/wave/: k3bwavedecoder.cpp
plugins/dvdauthor/: Makefile.am  Makefile.in  burn-dvdauthor.c
plugins/dvdcss/: Makefile.am  Makefile.in  burn-dvdcss-private.h  burn-dvdcss.c
plugins/encoder/lame/: k3blameencoder.cpp
plugins/encoder/ogg/: k3boggvorbisencoder.cpp
plugins/encoder/sox/: k3bsoxencoder.cpp
plugins/growisofs/: Makefile.am  Makefile.in  burn-dvd-rw-format.c  burn-growisofs-common.h  burn-growisofs.c
plugins/libburnia/: Makefile.am  Makefile.in  burn-libburn-common.c  burn-libburn-common.h  burn-libburn.c  burn-libburnia.h  burn-libisofs.c
plugins/local-track/: Makefile.am  Makefile.in  burn-local-image.c  burn-uri.c
plugins/project/audiometainforenamer/: k3baudiometainforenamerplugin.cpp
plugins/transcode/: Makefile.am  Makefile.in  burn-normalize.c  burn-normalize.h  burn-transcode.c  burn-vob.c
plugins/vcdimager/: Makefile.am  Makefile.in  burn-vcdimager.c
po/: LINGUAS  (+83 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  ThemeManager.cpp  ThemeManager.h  brasero-app.c  brasero-app.h  brasero-audio-disc.c  brasero-cli.c  brasero-data-disc.c  brasero-file-filtered.c  brasero-filter-option.c  brasero-layout.c  brasero-marshal.c  brasero-marshal.h  brasero-multi-song-props.c  brasero-playlist.c  brasero-plugin-manager-ui.c  brasero-project-manager.c  brasero-project-manager.h  brasero-project-name.c  brasero-project-parse.h  brasero-project-type-chooser.c  brasero-project-type-chooser.h  brasero-project.c  brasero-project.h  brasero-song-properties.c  brasero-split-dialog.c  brasero-video-disc.c  burner-app.c  burner-app.h  burner-audio-disc.c  burner-audio-disc.h  burner-cli.c  burner-cli.h  burner-data-disc.c  burner-data-disc.h  burner-disc.c  burner-disc.h  burner-drive-settings.c  (+125 more)
src/misc/: k3bimagewritingdialog.cpp  k3bimagewritingdialog.h  k3bmediacopydialog.cpp  k3bmediacopydialog.h  k3bmediaformattingdialog.cpp  k3bmediaformattingdialog.h
src/option/: k3bdevicewidget.h  k3bexternalbinpermissionmodel.h  k3bexternalbinwidget.cpp  k3bexternalbinwidget.h  k3bmiscoptiontab.cpp  k3bthemeoptiontab.cpp
src/pic/: CMakeLists.txt  images.qrc
src/projects/: k3baudioburndialog.cpp  k3baudiotracktrmlookupdialog.cpp  k3baudioview.cpp  k3baudioview.h  k3baudioviewimpl.cpp  k3bdataburndialog.cpp  k3bdataburndialog.h  k3bdataprojectmodel.cpp  k3bdataprojectmodel.h  k3bdataprojectsortproxymodel.cpp  k3bdataurladdingdialog.cpp  k3bdataview.cpp  k3bdataview.h  k3bdataviewimpl.cpp  k3bdataviewimpl.h  k3bencodingconverter.cpp  k3bfillstatusdisplay.cpp  k3bmixedburndialog.cpp  k3bmixedview.cpp  k3bprojectburndialog.cpp  k3bprojectburndialog.h  k3bvcdview.cpp  k3bvcdview.h  k3bview.cpp  k3bview.h  k3bvolumenamewidget.cpp
(+935 files in other folders)
